--- a/Plugins/MultiplayerSessions/MultiplayerSessions.uplugin
+++ b/Plugins/MultiplayerSessions/MultiplayerSessions.uplugin
@@ -3,9 +3,9 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "MultiplayerSessions",
-	"Description": "A plugin for handling online multiplayer sessions",
+	"Description": "Multiplayer Session Handler Plugin",
 	"Category": "Other",
-	"CreatedBy": "Stephen Ulibarri",
+	"CreatedBy": "Owen Mason",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
